# capstone_project

./: .gitignore  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
carts/: models.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
ecommerce_api/: settings.py  urls.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
